--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,12 @@
     "react/jsx-filename-extension": 0,
     "react/jsx-one-expression-per-line": 0,
     "no-nested-ternary": 0,
+    "react/jsx-props-no-spreading": ["warn"],
+    "react/prop-types": 0,
+    "no-console": ["off"],
+    "import/prefer-default-export": ["off"],
+    "no-unused-vars": ["off"],
+    "no-shadow": ["off"],
     "prettier/prettier": ["error", { "endOfLine": "auto" }]
   }
 }
